// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features - La Nacion - Components - Nota - AperturaReceta Snapshot - anexo con destacado 1`] = `
<div>
  <div
    class="row aper-receta w-100-mobile"
  >
    <mock-apertura-con-destacado
      globalcontent="[object Object]"
    />
  </div>
</div>
`;

exports[`features - La Nacion - Components - Nota - AperturaReceta Snapshot - sin promo_items basic debe renderizar correctamente, sin destacado 1`] = `
<div>
  <div
    class="row aper-receta w-100-mobile"
  >
    <mock-apertura-sin-destacado
      receta="[object Object]"
      tags="[object Object],[object Object]"
      taxonomy="[object Object]"
    />
  </div>
</div>
`;
